WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
193925
css3/filters/blur-filter-page-scroll-self.html crashes under WebCore::ScrollingStateNode::ScrollingStateNode
https://bugs.webkit.org/show_bug.cgi?id=193925
Summary
css3/filters/blur-filter-page-scroll-self.html crashes under WebCore::Scrolli...
Simon Fraser (smfr)
Reported
2019-01-28 14:35:51 PST
Scrolling tree is hanging onto GraphicsLayer which are getting destroyed. The crashing tests call: window.internals.settings.setAcceleratedCompositingEnabled(false);
Attachments
Patch
(2.11 KB, patch)
2019-01-28 15:12 PST
,
Simon Fraser (smfr)
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2019-01-28 14:36:13 PST
<
rdar://problem/47582241
>
Simon Fraser (smfr)
Comment 2
2019-01-28 15:12:13 PST
Created
attachment 360381
[details]
Patch
Simon Fraser (smfr)
Comment 3
2019-01-28 16:15:34 PST
https://trac.webkit.org/r240609
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug